SDA-2533 Fixed double scroll bars on windows

--- a/src/renderer/styles/snipping-tool.less
+++ b/src/renderer/styles/snipping-tool.less
@@ -5,6 +5,7 @@
 @text-padding: 10px;
 
 body {
+  overflow: hidden;
   background-color: white;
   margin: 0;
   height: 100%;
